refactor:팔로잉페이지도 동적으로 보여주도록 수정